--- a/Deda mrazova radionica II deo/DedaMrazovaRadionica/DedaMrazovaRadionica/DedaMrazovaRadionica.csproj
+++ b/Deda mrazova radionica II deo/DedaMrazovaRadionica/DedaMrazovaRadionica/DedaMrazovaRadionica.csproj
@@ -110,7 +110,9 @@
     <Compile Include="Entiteti\Pesma.cs" />
     <Compile Include="Entiteti\Pismo.cs" />
     <Compile Include="Entiteti\Poklon.cs" />
+    <Compile Include="Entiteti\Tim.cs" />
     <Compile Include="Entiteti\Tovar.cs" />
+    <Compile Include="Entiteti\Vilenjak.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -126,7 +128,9 @@
     <Compile Include="Mapiranja\PesmaMapiranja.cs" />
     <Compile Include="Mapiranja\PismoMapiranja.cs" />
     <Compile Include="Mapiranja\PoklonMapiranja.cs" />
+    <Compile Include="Mapiranja\TimMapiranja.cs" />
     <Compile Include="Mapiranja\TovarMapiranja.cs" />
+    <Compile Include="Mapiranja\VilenjakMapiranja.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
