--- a/Deda mrazova radionica II deo/DedaMrazovaRadionica/DedaMrazovaRadionica/DedaMrazovaRadionica.csproj
+++ b/Deda mrazova radionica II deo/DedaMrazovaRadionica/DedaMrazovaRadionica/DedaMrazovaRadionica.csproj
@@ -103,18 +103,25 @@
     <Compile Include="DataLayer.cs" />
     <Compile Include="Entiteti\DeoRadionice.cs" />
     <Compile Include="Entiteti\Dete.cs" />
+    <Compile Include="Entiteti\DeteRoditelj.cs" />
     <Compile Include="Entiteti\Igracka.cs" />
     <Compile Include="Entiteti\Irvas.cs" />
+    <Compile Include="Entiteti\IrvasIsporucujeTovar.cs" />
     <Compile Include="Entiteti\ListaZelja.cs" />
     <Compile Include="Entiteti\MagicnaVestina.cs" />
+    <Compile Include="Entiteti\PakovanjePoklona.cs" />
     <Compile Include="Entiteti\Pesma.cs" />
     <Compile Include="Entiteti\Pismo.cs" />
     <Compile Include="Entiteti\Poklon.cs" />
+    <Compile Include="Entiteti\SpojVilenjakZaPokloneVestina.cs" />
     <Compile Include="Entiteti\Tim.cs" />
     <Compile Include="Entiteti\Tovar.cs" />
     <Compile Include="Entiteti\Vilenjak.cs" />
+    <Compile Include="Entiteti\SpojVilenjakZaIgrackeVestina.cs" />
+    <Compile Include="Entiteti\SpojVilenjakZaIrvaseVestina.cs" />
     <Compile Include="Entiteti\VilenjakZaIrvase.cs" />
     <Compile Include="Entiteti\VilenjakZaIsporukuPoklona.cs" />
+    <Compile Include="Entiteti\SpojVilenjakZaIsporukuVestina.cs" />
     <Compile Include="Entiteti\VilenjakZaIzraduIgracaka.cs" />
     <Compile Include="Entiteti\VilenjakZaPoklone.cs" />
     <Compile Include="Form1.cs">
@@ -125,18 +132,25 @@
     </Compile>
     <Compile Include="Mapiranja\DeoRadioniceMapiranja.cs" />
     <Compile Include="Mapiranja\DeteMapiranja.cs" />
+    <Compile Include="Mapiranja\DeteRoditeljMapiranja.cs" />
     <Compile Include="Mapiranja\IgrackaMapiranja.cs" />
+    <Compile Include="Mapiranja\IrvasIsporucujeTovarMapiranja.cs" />
     <Compile Include="Mapiranja\IrvasMapiranja.cs" />
     <Compile Include="Mapiranja\ListaZeljaMapiranja.cs" />
     <Compile Include="Mapiranja\MagicnaVestinaMapiranja.cs" />
+    <Compile Include="Mapiranja\PakovanjePoklonaMapiranja.cs" />
     <Compile Include="Mapiranja\PesmaMapiranja.cs" />
     <Compile Include="Mapiranja\PismoMapiranja.cs" />
     <Compile Include="Mapiranja\PoklonMapiranja.cs" />
+    <Compile Include="Mapiranja\SpojVilenjakZaPokloneVestinaMapiranja.cs" />
     <Compile Include="Mapiranja\TimMapiranja.cs" />
     <Compile Include="Mapiranja\TovarMapiranja.cs" />
     <Compile Include="Mapiranja\VilenjakMapiranja.cs" />
+    <Compile Include="Mapiranja\SpojVilenjakZaIgrackeVestinaMapiranja.cs" />
     <Compile Include="Mapiranja\VilenjakZaIrvaseMapiranja.cs" />
+    <Compile Include="Mapiranja\SpojVilenjakZaIrvaseVestinaMapiranja.cs" />
     <Compile Include="Mapiranja\VilenjakZaIsporukuPoklonaMapiranja.cs" />
+    <Compile Include="Mapiranja\SpojVilenjakZaIsporukuVestinaMapiranja.cs" />
     <Compile Include="Mapiranja\VilenjakZaIzraduIgracakaMapiranja.cs" />
     <Compile Include="Mapiranja\VilenjakZaPokloneMapiranja.cs" />
     <Compile Include="Program.cs" />
