--- a/Deda mrazova radionica II deo/DedaMrazovaRadionica/DedaMrazovaRadionica/DedaMrazovaRadionica.csproj
+++ b/Deda mrazova radionica II deo/DedaMrazovaRadionica/DedaMrazovaRadionica/DedaMrazovaRadionica.csproj
@@ -124,11 +124,11 @@
     <Compile Include="Entiteti\SpojVilenjakZaIsporukuVestina.cs" />
     <Compile Include="Entiteti\VilenjakZaIzraduIgracaka.cs" />
     <Compile Include="Entiteti\VilenjakZaPoklone.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="PocetnaStranica.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="PocetnaStranica.Designer.cs">
+      <DependentUpon>PocetnaStranica.cs</DependentUpon>
     </Compile>
     <Compile Include="Mapiranja\DeoRadioniceMapiranja.cs" />
     <Compile Include="Mapiranja\DeteMapiranja.cs" />
@@ -155,8 +155,8 @@
     <Compile Include="Mapiranja\VilenjakZaPokloneMapiranja.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="PocetnaStranica.resx">
+      <DependentUpon>PocetnaStranica.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
