--- a/Deda mrazova radionica II deo/DedaMrazovaRadionica/DedaMrazovaRadionica/DedaMrazovaRadionica.csproj
+++ b/Deda mrazova radionica II deo/DedaMrazovaRadionica/DedaMrazovaRadionica/DedaMrazovaRadionica.csproj
@@ -144,6 +144,12 @@
     <Compile Include="Forme\DodajNovogVilenjakaForma.Designer.cs">
       <DependentUpon>DodajNovogVilenjakaForma.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forme\DodavanjeIgracakaForma.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forme\DodavanjeIgracakaForma.Designer.cs">
+      <DependentUpon>DodavanjeIgracakaForma.cs</DependentUpon>
+    </Compile>
     <Compile Include="PocetnaStranica.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -183,6 +189,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forme\DodajNovogVilenjakaForma.resx">
       <DependentUpon>DodajNovogVilenjakaForma.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forme\DodavanjeIgracakaForma.resx">
+      <DependentUpon>DodavanjeIgracakaForma.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PocetnaStranica.resx">
       <DependentUpon>PocetnaStranica.cs</DependentUpon>
